samples/_failures_safe/1761180075_9fc22f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71de5774.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_71de5774.c:149:13: error: expected declaration or statement at end of input
  149 |             printf("Invalid algorithm\n");
      |             ^~~~~~
./samples/SAFE/__tmp_71de5774.c:149:13: error: expected declaration or statement at end of input
